# platform.adaptation.libtdm-fbdev

./: configure.ac
packaging/: libtdm-fbdev.spec
src/: Makefile.am  tdm_fbdev.c  tdm_fbdev.h  tdm_fbdev_display.c
